# LeagueSpy

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  install.sh  pyproject.toml  requirements.txt
assets/: slides.html  visual-explainer.html
docs/slides/: presentation.html
scripts/: announce_update.py  migrate_v2.sql  migrate_v3.sql  readme_walkthrough.sh  setup_db.sql  test_scoreboard.py  test_summary.py
src/: _render_helpers.py  analytics.py  awards.py  bot.py  champion_icons.py  cli.py  commentary.py  config.py  daily_summary.py  database.py  demo.py  demo_data.py  doctor.py  embeds.py  llm.py  match_actions.py  match_image.py  models.py  rankings.py  sample_data.py  scraper.py  showcase.py  trends.py
src/cogs/: __init__.py  analyst.py  analytics.py  ask.py  commands.py  live.py  roast.py
tests/: test_analyst.py  test_analytics.py  test_analytics_cog.py  test_awards.py  test_bot_cli.py  test_champion_icons.py  test_commands.py  test_commentary.py  test_config.py  test_daily_summary.py  test_database.py  test_demo.py  test_doctor.py  test_doctor_cli.py  test_embeds.py  test_install_script.py  test_live.py  test_llm.py  test_match_actions.py  test_match_image.py  test_models.py  test_rankings.py  test_roast.py  test_scraper.py  test_summary_scheduler.py  test_trends.py
