[project]
name = "leaguespy"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "discord.py>=2.3.0",
    "playwright>=1.40",
    "oracledb>=2.0.0",
    "PyYAML>=6.0",
    "Pillow>=10.0",
    "httpx>=0.24",
    "pytest>=7.0",
    "pytest-asyncio>=0.21"
]

[dependency-groups]
dev = []

[tool.uv]
